# omega-gte-project

./: .gitignore  .gn  AUTOM  AUTOM.build  AUTOMDEPS  BUILD.gn  CMakeLists.txt  Doxyfile  OmegaGTE.cmake  README.md  config-gn.bat
conf-out/: manifest.rc
docs/: CommandBuffer.rst  GraphicsEngine.rst  OmegaSL.rst  TessalationEngine.rst  conf.py  index.rst
external-libs/: .gitignore
gn/: BUILDCONFIG.gn  EXPORT.gni  OmegaGTE.autom  OmegaGTE.gni  __copy.py  pkg-conf.py  shaderc.py
gn/toolchain/: BUILD.gn
include/: OmegaGTE.h  omegasl.h
include/omegaGE/: GE.h  GEBase.h  GECommandQueue.h  GERenderPass.h  GERenderTarget.h
include/omegaGTE/: GE.h  GECommandQueue.h  GEPipeline.h  GERenderPass.h  GERenderTarget.h  GETexture.h  GTEBase.h  GTEShader.h  GTEShaderTypes.h  TE.h
o/: std.metallib  std.omegasl.cc  std.omegasl.h  std.omegasl.src.c  std__omegasl.ebin
omega-sl/: OmegaSLSyntax.cpp  OmegaSLSyntax.h  Template.txt  main.cpp
omegasl/: CMakeLists.txt  OmegaSLGen.h  OmegaSLSyntax.cpp  OmegaSLSyntax.h  Syntax.txt  _main.py  main.cpp  omegasl.py  omegaslc  omegaslc.bat
omegasl/omegasl_c/: __init__.py  compiler_invoker.py  glsl_target.py  hlsl_target.py  msl_target.py  omegaslc.py  parser.py  sl_ast.py  target.py  target_writer.py
omegasl/src/: AST.cpp  AST.def  AST.h  CodeGen.cpp  CodeGen.h  GLSLCodeGen.cpp  HLSLCodeGen.cpp  Lexer.cpp  Lexer.h  MetalCodeGen.cpp  MetalShaderCompile.mm  Parser.cpp  Parser.h  Toks.def  main.cpp
omegasl/tests/: shaders.omegasl  test.comp  test.cso  test.hlsl  test.metal  testout.omegasllib
omegasl/tests/temp/: myFrag.frag  myFrag.metal  myFrag.metallib  myFrag.spv  myFrag2.frag  myFrag2.metal  myFrag2.metallib  myFrag2.spv  myFragment.metal  myVertex.air  myVertex.metal  myVertex.metallib  myVertex.spv  myVertex.vert  myVertex2.metal  myVertex2.metallib  myVertex2.spv  myVertex2.vert
omegasl/tests/tempdir/: myFrag.cso  myFrag2.cso  myFrag2.hlsl  myVertex.cso  myVertex.hlsl  myVertex2.cso  myVertex2.hlsl
omegasl/tests/testout/: shaders.omegasllib  structs.h
shaders/: std.omegasl  std.xml
shaders/temp/: std.hlsl
src/: D3D12TEContext.cpp  GE.cpp  GECommandQueue.cpp  GEPipeline.cpp  GERenderTarget.cpp  GTEBase.cpp  GTEShader.cpp  Info.plist  Info.plist.in  MetalTEContext.mm  OmegaGTE.cpp  TE.cpp  VulkanTEContext.cpp  omegasl_runtime.cpp
src/d3d12/: D3D12TEContext.cpp  GED3D12.cpp  GED3D12.h  GED3D12CommandQueue.cpp  GED3D12CommandQueue.h  GED3D12Pipeline.cpp  GED3D12Pipeline.h  GED3D12RenderTarget.cpp  GED3D12RenderTarget.h  GED3D12Texture.cpp  GED3D12Texture.h
src/metal/: GEMetal.h  GEMetal.mm  GEMetalCommandQueue.h  GEMetalCommandQueue.mm  GEMetalPipeline.h  GEMetalPipeline.mm  GEMetalRenderTarget.h  GEMetalRenderTarget.mm  GEMetalTexture.h  GEMetalTexture.mm  MetalTEContext.mm
src/shaders/hlsl/: Test.hlsl
src/shaders/metal/: Metal.metal
src/vulkan/: GEVulkan.cpp  GEVulkan.h  GEVulkanCommandQueue.cpp  GEVulkanCommandQueue.h  GEVulkanPipeline.cpp  GEVulkanPipeline.h  GEVulkanRenderPass.h  GEVulkanRenderTarget.cpp  GEVulkanRenderTarget.h  GEVulkanTexture.cpp  GEVulkanTexture.h  VulkanTEContext.cpp
temp/: std.air  std.metal
tests/: CMakeLists.txt
tests/directx/: CMakeLists.txt
tests/directx/2DTest/: main.cpp  shaders.omegasl
tests/metal/: CMakeLists.txt
tests/metal/2DTest/: Info.plist  main.mm  shaders.omegasl
tests/vulkan/: CMakeLists.txt
tests/vulkan/2DTest/: main.cpp
wrappers/c/: OmegaGTE_C.h
